--- a/index.html
+++ b/index.html
@@ -28,10 +28,19 @@
             </div>
             <div class="navbar__s3">
                 <p>Courses</p>
-                <p>My Learning</p>
+                <!-- <p>My Learning</p> -->
+                <div class="mylearning">
+                    <p>My Learning</p>
+                    <p class="mylearning__popup">You did not purchase anything</p>
+                </div>
                 <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i>
                 <i class="fa-solid fa-bell" style="color: #000000;"></i>
                 <i class="fa-solid fa-user" style="color: #000000;"></i>
+            </div>
+
+            <div class="navbar__s4">
+                <i class="fa-solid fa-bars"></i>
+
             </div>
         </div>
 
@@ -48,6 +57,14 @@
         <!-- Sale-image -->
         <div class="sale-image">
             <img src="./images/sale-image.jpg" alt="Sale-Image">
+            <div class="sale-image__offer">
+                <h1>
+                    Udemy flash Sale! 24 hours to save
+                </h1>
+                <p>
+                    get the top courses for just 499. Just one day to save but a life time to learn
+                </p>
+            </div>
         </div>
 
         <!-- Recommendation -->
